...
        <View style={styles.topContainer}>
          <Button onPress={() => this.props.navigation.goBack()} color='transparent'>
            <Icon library='AntDesign' name='back' size={30} />
          </Button>
          <NotificationBell
            notifications={this.props.unseenNotificationsNumber}
            onPress={() => this.props.navigation.navigate('Fixes', {
              screen: 'Notifications',
            })}
          />
        </View>
        <Text style={styles.title}>Chats</Text>
        <View style = {styles.bodyContainer}>
          <View style= {styles.titleContainer}>
            <Button
              testID='activeMsg'
              style = {{ backgroundColor: this.state.activeSelected ? colors.dark : colors.white, borderTopLeftRadius: 20, flex: 1 }}
              onPress={() => this.setState({ activeSelected: true })}
              outline={!this.state.activeSelected}
            >
              <Text style={{ color: this.state.activeSelected ? colors.white : colors.dark }}>
              Active
              </Text>
            </Button>
            <Button
              testID='matchedMsg'
              style = {{ backgroundColor: this.state.activeSelected ? colors.white : colors.dark, borderTopRightRadius: 20, flex: 1 }}
              onPress={() => this.setState({ activeSelected: false })}
              outline={!!this.state.activeSelected}
            >
              <Text style={{ color: this.state.activeSelected ? colors.dark : colors.white }}>
              Matched
...
