...
          width={125}
          color="accent"
        >
          Skip (Client)
        </Button>
        <Button
          testID='skipCraftsman'
          onPress={() => {
            persistentStore.dispatch(
              persistentActions.default.setAuthStatus(true, 'eyJ0eXAiOiJKV1QiLCJhbGciOiJSUzI1NiIsImtpZCI6ImtYTGVJemxsTFFnR1I4Q3ZSV1dKVVJTQ0ZHSG8zMVk0ZmlYa1h6X25hdk0ifQ.eyJleHAiOjE2MTgxMTI4MDEsIm5iZiI6MTYxODEwOTIwMSwidmVyIjoiMS4wIiwiaXNzIjoiaHR0cHM6Ly9maXhpdGIyY3Rlc3QuYjJjbG9naW4uY29tL2I1OTA4MjZmLWRiYjQtNGYyYy05ZjcyLWNmYzllYTExNmI1ZC92Mi4wLyIsInN1YiI6ImQzMTczNDBiLTE3YmYtNGRiYS05NDRhLTg1NmEyNWVhYThl
            );
            persistentStore.dispatch(
              persistentActions.default.setUserInfo(
...
            position: 'absolute',
            bottom: 50,
            padding: 10,
            borderRadius: 7,
          }}
        >
          <Button testID='loginButton' onPress={this.handleSignInPress} width={125}>
            Log In
          </Button>
          <Button testID='signupButton' onPress={this.handleSignUpPress} width={125} color="accent">
            Sign Up
          </Button>
        </View>
      </ImageBackground>
    );
  }
...
